--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     text-align: center;
     color: white;
-    padding: 4rem 2rem;
+    padding: 4rem 2rem;£
     position: relative;
     z-index: 1;
   }
