Full Upload: index.html, style.css, assets

--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ nav::after {
 
 
 .hero {
-    background-image: url('assets/mannschaftsfoto.jpg');
+    background-image: url('assets/hero1.png');
     position: relative;
 }
 
