Website-Update: neue Player Cards, Bildkorrekturen, Mobilfix

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .hero {
     min-height: 100vh;
-    background-image: url('assets/hero.png');
+    background-image: url('assets/verein.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
